tcproute/tcp-gw-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-tcp
  namespace: web
spec:
  addresses:
  - type: "IPAddress"
    value: 192.168.48.202
  gatewayClassName: f5-gateway-class
  listeners:
  - name: coffee
    protocol: TCP
    port: 6010
    allowedRoutes:
      kinds:
      - kind: L4Route
        group: gateway.k8s.f5net.com
  - name: tea
    protocol: TCP
    port: 6020
    allowedRoutes:
      kinds:
      - kind: L4Route
        group: gateway.k8s.f5net.com
